force-app/main/default/objects/Business_Unit__mdt/Business_Unit__mdt.object-meta.xml
<CustomObject>
    <label>Business Unit</label>
    <pluralLabel>Business Units</pluralLabel>
</CustomObject>