force-app/main/default/objects/Business_Unit__mdt/fields/Business_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Name__c</fullName>
    <label>Business Unit Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>