force-app/main/default/objects/Business_Unit__mdt/fields/MID__c.field-meta.xml
<CustomField>
    <fullName>MID__c</fullName>
    <label>MID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>