force-app/main/default/objects/Business_Unit__mdt/fields/Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Email__c</fullName>
    <description>Support email to be used for the business unit.</description>
    <label>Support Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>