force-app/main/default/objects/Business_Unit__mdt/fields/Support_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Support_Mailing_Address__c</fullName>
    <description>Support mailing address for the business unit.</description>
    <label>Support Mailing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>