force-app/main/default/objects/Business_Unit__mdt/fields/Support_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Support_Phone_Number__c</fullName>
    <description>Support phone number for the business unit.</description>
    <label>Support Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>