force-app/main/default/objects/Business_Unit__mdt/fields/Support_Web_Link__c.field-meta.xml
<CustomField>
    <fullName>Support_Web_Link__c</fullName>
    <description>Link to the support website for the business unit</description>
    <label>Support Web Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>