force-app/main/default/objects/Business_Unit__mdt/fields/Support_Web_Title__c.field-meta.xml
<CustomField>
    <fullName>Support_Web_Title__c</fullName>
    <description>Title to be used for the link to the support website.</description>
    <label>Support Web Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>